# CMake_PracWeek_2

./: CMakeLists.txt  Practical1.cpp  README.md
CMake_PracWeek_2/: CMakeLists.txt  CMake_PracWeek_2.cpp  CMake_PracWeek_2.h
